--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=test
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.connection-timeout=1000
